fix public db schema

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ ZGRANX_SDB_USER=szgranx
 ZGRANX_SDB_PASSWORD=spassword
 ZGRANX_SDB_ROOT_PASSWORD=rspassword
 ZGRANX_SDB_DATABASE=szgranx
+
+ZGRANX_PDB_USER=pzgranx
+ZGRANX_PDB_PASSWORD=ppassword
+ZGRANX_PDB_ROOT_PASSWORD=rppassword
+ZGRANX_PDB_DATABASE=pzgranx
