--- a/rsi_service/Cargo.toml
+++ b/rsi_service/Cargo.toml
@@ -8,7 +8,12 @@ edition = "2021"
 [dependencies]
 tonic = "0.7"
 prost = "0.10"
+prost-types = "0.10"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+
+[[bin]] # Bin to run the HelloWorld gRPC server
+name = "rsi-grpc-server"
+path = "src/server.rs"
 
 [build-dependencies]
 tonic-build = "0.7"
