--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-ZGRANX_SDB_USER=szgranx
-ZGRANX_SDB_PASSWORD=spassword
-ZGRANX_SDB_ROOT_PASSWORD=rspassword
-ZGRANX_SDB_DATABASE=szgranx
+T_801_SDB_USER=sT-801
+T_801_SDB_PASSWORD=spassword
+T_801_SDB_ROOT_PASSWORD=rspassword
+T_801_SDB_DATABASE=sT-801
 
-ZGRANX_PDB_USER=pzgranx
-ZGRANX_PDB_PASSWORD=ppassword
-ZGRANX_PDB_ROOT_PASSWORD=rppassword
-ZGRANX_PDB_DATABASE=pzgranx
+T_801_PDB_USER=pT-801
+T_801_PDB_PASSWORD=ppassword
+T_801_PDB_ROOT_PASSWORD=rppassword
+T_801_PDB_DATABASE=pT-801
