--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,12 @@ T_801_SDB_USER=sT-801
 T_801_SDB_PASSWORD=spassword
 T_801_SDB_ROOT_PASSWORD=rspassword
 T_801_SDB_DATABASE=sT-801
+T_801_SDB_HOST=localhost
+T_801_SDB_PORT=3306
 
 T_801_PDB_USER=pT-801
 T_801_PDB_PASSWORD=ppassword
 T_801_PDB_ROOT_PASSWORD=rppassword
 T_801_PDB_DATABASE=pT-801
+T_801_PDB_HOST=localhost
+T_801_PDB_PORT=3307
