--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ T_801_PDB_ROOT_PASSWORD=rppassword
 T_801_PDB_DATABASE=pT-801
 T_801_PDB_HOST=localhost
 T_801_PDB_PORT=3307
+
+HUOBI_RO_ACCESS_KEY=HRAK-123
+HUOBI_RO_SECRET_KEY=zecred-HRAK-123
