--- a/rsi_service/Cargo.toml
+++ b/rsi_service/Cargo.toml
@@ -10,6 +10,7 @@ tonic = "0.7"
 prost = "0.10"
 prost-types = "0.10"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+uuid = { version = "1.1", features = ["v4"] }
 
 [[bin]] # Bin to run the HelloWorld gRPC server
 name = "rsi-grpc-server"
