--- a/rsi_service/Cargo.toml
+++ b/rsi_service/Cargo.toml
@@ -12,9 +12,10 @@ prost-types = "0.10"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1.1", features = ["v4"] }
 
-[[bin]] # Bin to run the HelloWorld gRPC server
-name = "rsi-grpc-server"
-path = "src/server.rs"
+
+#[[bin]] # Bin to run the rsi_service
+#name = "rsi-grpc-server"
+#path = "src/server.rs"
 
 [build-dependencies]
 tonic-build = "0.7"
