--- a/rsi_service/Cargo.toml
+++ b/rsi_service/Cargo.toml
@@ -6,15 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+utils = { path = "../utils" }
 tonic = "0.7"
 prost = "0.10"
 prost-types = "0.10"
 rust_decimal_macros = "1.25"
 tokio-test = "0.4"
 rust_decimal = { version = "1.25", features = ["maths"] }
-sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls"] }
 tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
-uuid = { version = "1.1", features = ["v4"] }
 
 [build-dependencies]
 tonic-build = "0.7"
