--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ T_801_PDB_PORT=3307
 
 HUOBI_RO_ACCESS_KEY=HRAK-123
 HUOBI_RO_SECRET_KEY=zecred-HRAK-123
+
+HUOBI_RW_ACCESS_KEY=HRAK-577
+HUOBI_RW_SECRET_KEY=zecred-HRAK-577
